2020-10-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/g_funcs.c: Change int successes to bool in g_funcs_postscript
      and g_funcs_print. Revise g_funcs_output_type to eliminate second
      conditional.

2020-10-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/: Reformat function documentation:

        * src/guile/g_rc.c
        * src/guile/g_select.c

    * src/guile/g_action.c: Add function documentation:

        * g_process_action

    * src/guile/g_register.c: Remove static specifier from action_list in
      g_register_funcs.

2020-10-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/: Reformat function documentation:

        * src/guile/g_action.c
        * src/guile/g_attrib.c
        * src/guile/g_rc.c
        * src/guile/g_register.c
        * src/guile/g_funcs.c

    * src/guile/g_action.c: Add todo documentation templates.

2020-10-10 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/nl.po: Update Dutch translations.
    * po/sr.po: Update Serbian translations.
    * po/tr.po: Update Turkish translations.

2020-10-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Add function documentation:

        * i_command_process
        * action_err

    * src/x/x_edit_cprop.c: Reformat Doxygen documentation.

2020-10-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Add function documentation:

        * i_command_get_command_list
        * i_command_is_valid
        * i_command_map_icon

2020-10-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Revise log messages to eliminate line feed
      characters in translation text.

2020-10-03 Wiley E. Hill <wileyhill@gmail.com>
