@@ -1,3 +1,7 @@
+2020-10-15 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x/x_menus.c: Add function x_menu_get_ui_list.
+
 2020-10-14 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/guile/g_funcs.c: Change int successes to bool in g_funcs_postscript
